amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.2-beta2:
  CHG: Handle incremental file scanning in a thread. Now the GUI doesn't
       get blocked every 30 seconds, anymore.
  ADD: CollectionBrowser now offers two operation modes:
       The classical TreeView and a new FlatView (like the WinAmp Library).
  FIX: Caching of local cover images was broken for non-unique filenames.
       (BR 94068)
  FIX: "Visualizations" menu entry was always disabled.
  FIX: Play button was sometimes stuck in disabled state.
  FIX: OSD was showing "%artist - %track" instead of "%artist - %title".
  FIX: Forward command line option --engine to amarokapp.

VERSION 1.2-beta1:
  ADD: Full support for Audioscrobbler, including submission of tracks.
  FIX: Arts engine resumes from position when session is restored.
  ADD: Vorbis stream metadata support (GStreamer-engine). (BR 82378)
  ADD: Cover image and lyric fetchers include filters for common
       extensions, such as (Disc 1). (BR 90630)
  ADD: Ability to choose from four different Amazon locales. (BR 90664)
  ADD: OSD now draws gradient instead of solid colour.
  ADD: 'Stop after current song' functionality. (BR 88652)
  FIX: Queue function from context/collection browsers actually properly
       queues tracks. (BR 90319)
  ADD: MySQL database support. Patch by Andreas Mair <am_ml@linogate.com>.
       Please refer to mailing list for detailed instructions.
  ADD: Metadata history for streams in Context-Browser. (BR 89839)
  ADD: Command line option --engine.
  ADD: OSD text is now configurable, and it displays the album cover.
  FIX: Remote folders are read recursively when dropped on the playlist.
  FIX: Audiocd protocol in filebrowser had empty folders.
  ADD: Cache system for current-track animation in playlist. Reduces
       CPU load when the playlist is visible.
  ADD: 10-band IIR equalizer for GStreamer and xine engines.
  FIX: The background gradient effect in Context-Browser is now much