@@ -4,6 +4,8 @@ amaroK ChangeLog
 
 
 VERSION 1.2-beta2:
+  FIX: When collection scanning was interrupted with Cancel, incremental
+       scanning didn't work any longer.
   CHG: Handle incremental file scanning in a thread. Now the GUI doesn't
        get blocked every 30 seconds, anymore.
   ADD: CollectionBrowser now offers two operation modes:
